fix list item alignment

--- a/site/src/pages/_index/features/Features.module.css
+++ b/site/src/pages/_index/features/Features.module.css
@@ -19,6 +19,7 @@
 .listItem {
   margin-bottom: var(--uitk-size-unit);
   display: flex;
+  align-items: baseline;
 }
 
 .listItem > svg {
